// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Levels Inner level render correctly 1`] = `
<Select
  asyncData={false}
  className="drawer-tree-select-levels"
  defaultValue="value"
  loadingContent="Loading..."
  notFoundContent="No data"
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "label",
        "value": "levels value",
      },
    ]
  }
  value="value"
  withPagination={false}
>
  <Select
    bordered={true}
    choiceTransitionName="zoom"
    className="drawer-tree-select-levels"
    defaultValue="value"
    loading={false}
    notFoundContent="No data"
    onChange={[Function]}
    onDropdownVisibleChange={null}
    options={
      Array [
        Object {
          "label": "label",
          "value": "levels value",
        },
      ]
    }
    tagRender={[Function]}
    transitionName="slide-up"
    value="value"
  >
    <Select
      choiceTransitionName="zoom"
      className="drawer-tree-select-levels"
      clearIcon={<ForwardRef(CloseCircleFilled) />}
      defaultValue="value"
      dropdownClassName=""
      inputIcon={[Function]}
      listHeight={256}
      listItemHeight={24}
      loading={false}
      menuItemSelectedIcon={null}
      notFoundContent="No data"
      onChange={[Function]}
      onDropdownVisibleChange={null}
      options={
        Array [
          Object {
            "label": "label",
            "value": "levels value",
          },
        ]
      }
      prefixCls="ant-select"
      removeIcon={<ForwardRef(CloseOutlined) />}
      tagRender={[Function]}
      transitionName="slide-up"
      value="value"
    >
      <ForwardRef(Select)
        choiceTransitionName="zoom"
        className="drawer-tree-select-levels"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        defaultValue="value"
        dropdownClassName=""
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={24}
        loading={false}
        menuItemSelectedIcon={null}
        notFoundContent="No data"
        onChange={[Function]}
        onDropdownVisibleChange={null}
        options={
          Array [
            Object {
              "label": "label",
              "value": "levels value",
            },
          ]
        }
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        tagRender={[Function]}
        transitionName="slide-up"
        value="value"
      >
        <div
          className="ant-select drawer-tree-select-levels ant-select-single ant-select-show-arrow"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <SelectTrigger
            containerWidth={null}
            dropdownClassName=""
            empty={false}
            getTriggerDOMNode={[Function]}
            popupElement={
              <ForwardRef(OptionList)
                childrenAsData={false}
                defaultActiveFirstOption={true}
                flattenOptions={
                  Array [
                    Object {
                      "data": Object {
                        "label": "label",
                        "value": "levels value",
                      },
                      "groupOption": false,
                      "key": "levels value",
                    },
                  ]
                }
                height={256}
                id="rc_select_TEST_OR_SSR"
                itemHeight={24}
                menuItemSelectedIcon={null}
                multiple={false}
                notFoundContent="No data"
                onActiveValue={[Function]}
                onSelect={[Function]}
                onToggleOpen={[Function]}
                options={
                  Array [
                    Object {
                      "label": "label",
                      "value": "levels value",
                    },
                  ]
                }
                prefixCls="ant-select"
                searchValue=""
                values={
                  Set {
                    "value",
                  }
                }
                virtual={true}
              />
            }
            prefixCls="ant-select"
            transitionName="slide-up"
          >
            <Trigger
              action={Array []}
              afterPopupVisibleChange={[Function]}
              autoDestroy={false}
              blurDelay={0.15}
              builtinPlacements={
                Object {
                  "bottomLeft": Object {
                    "offset": Array [
                      0,
                      4,
                    ],
                    "overflow": Object {
                      "adjustX": 0,
                      "adjustY": 1,
                    },
                    "points": Array [
                      "tl",
                      "bl",
                    ],
                  },
                  "bottomRight": Object {
                    "offset": Array [
                      0,
                      4,
                    ],
                    "overflow": Object {
                      "adjustX": 0,
                      "adjustY": 1,
                    },
                    "points": Array [
                      "tr",
                      "br",
                    ],
                  },
                  "topLeft": Object {
                    "offset": Array [
                      0,
                      -4,
                    ],
                    "overflow": Object {
                      "adjustX": 0,
                      "adjustY": 1,
                    },
                    "points": Array [
                      "bl",
                      "tl",
                    ],
                  },
                  "topRight": Object {
                    "offset": Array [
                      0,
                      -4,
                    ],
                    "overflow": Object {
                      "adjustX": 0,
                      "adjustY": 1,
                    },
                    "points": Array [
                      "br",
                      "tr",
                    ],
                  },
                }
              }
              defaultPopupVisible={false}
              destroyPopupOnHide={false}
              focusDelay={0}
              getDocument={[Function]}
              getPopupClassNameFromAlign={[Function]}
              getTriggerDOMNode={[Function]}
              hideAction={Array []}
              mask={false}
              maskClosable={true}
              mouseEnterDelay={0}
              mouseLeaveDelay={0.1}
              onPopupAlign={[Function]}
              onPopupVisibleChange={[Function]}
              popup={
                <div>
                  <ForwardRef(OptionList)
                    childrenAsData={false}
                    defaultActiveFirstOption={true}
                    flattenOptions={
                      Array [
                        Object {
                          "data": Object {
                            "label": "label",
                            "value": "levels value",
                          },
                          "groupOption": false,
                          "key": "levels value",
                        },
                      ]
                    }
                    height={256}
                    id="rc_select_TEST_OR_SSR"
                    itemHeight={24}
                    menuItemSelectedIcon={null}
                    multiple={false}
                    notFoundContent="No data"
                    onActiveValue={[Function]}
                    onSelect={[Function]}
                    onToggleOpen={[Function]}
                    options={
                      Array [
                        Object {
                          "label": "label",
                          "value": "levels value",
                        },
                      ]
                    }
                    prefixCls="ant-select"
                    searchValue=""
                    values={
                      Set {
                        "value",
                      }
                    }
                    virtual={true}
                  />
                </div>
              }
              popupAlign={Object {}}
              popupClassName=""
              popupPlacement="bottomLeft"
              popupStyle={
                Object {
                  "minWidth": null,
                  "width": null,
                }
              }
              popupTransitionName="slide-up"
              prefixCls="ant-select-dropdown"
              showAction={Array []}
            >
              <Selector
                accessibilityIndex={0}
                activeValue={null}
                choiceTransitionName="zoom"
                className="drawer-tree-select-levels"
                clearIcon={<ForwardRef(CloseCircleFilled) />}
                defaultValue="value"
                domRef={
                  Object {
                    "current": <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                      >
                        value
                      </span>
                    </div>,
                  }
                }
                dropdownClassName=""
                id="rc_select_TEST_OR_SSR"
                inputElement={null}
                inputIcon={[Function]}
                key="trigger"
                listHeight={256}
                listItemHeight={24}
                loading={false}
                menuItemSelectedIcon={null}
                multiple={false}
                notFoundContent="No data"
                onChange={[Function]}
                onDropdownVisibleChange={null}
                onSearch={[Function]}
                onSelect={[Function]}
                onToggleOpen={[Function]}
                options={
                  Array [
                    Object {
                      "label": "label",
                      "value": "levels value",
                    },
                  ]
                }
                prefixCls="ant-select"
                removeIcon={<ForwardRef(CloseOutlined) />}
                searchValue=""
                showSearch={false}
                tagRender={[Function]}
                transitionName="slide-up"
                value="value"
                values={
                  Array [
                    Object {
                      "disabled": undefined,
                      "key": "value",
                      "label": "value",
                      "value": "value",
                    },
                  ]
                }
              >
                <div
                  className="ant-select-selector"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  <SingleSelector
                    accessibilityIndex={0}
                    activeValue={null}
                    choiceTransitionName="zoom"
                    className="drawer-tree-select-levels"
                    clearIcon={<ForwardRef(CloseCircleFilled) />}
                    defaultValue="value"
                    domRef={
                      Object {
                        "current": <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                              aria-autocomplete="list"
                              aria-controls="rc_select_TEST_OR_SSR_list"
                              aria-haspopup="listbox"
                              aria-owns="rc_select_TEST_OR_SSR_list"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="rc_select_TEST_OR_SSR"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                          >
                            value
                          </span>
                        </div>,
                      }
                    }
                    dropdownClassName=""
                    id="rc_select_TEST_OR_SSR"
                    inputElement={null}
                    inputIcon={[Function]}
                    inputRef={
                      Object {
                        "current": <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          unselectable="on"
                          value=""
                        />,
                      }
                    }
                    listHeight={256}
                    listItemHeight={24}
                    loading={false}
                    menuItemSelectedIcon={null}
                    multiple={false}
                    notFoundContent="No data"
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onDropdownVisibleChange={null}
                    onInputChange={[Function]}
                    onInputKeyDown={[Function]}
                    onInputMouseDown={[Function]}
                    onInputPaste={[Function]}
                    onSearch={[Function]}
                    onSelect={[Function]}
                    onToggleOpen={[Function]}
                    options={
                      Array [
                        Object {
                          "label": "label",
                          "value": "levels value",
                        },
                      ]
                    }
                    prefixCls="ant-select"
                    removeIcon={<ForwardRef(CloseOutlined) />}
                    searchValue=""
                    showSearch={false}
                    tagRender={[Function]}
                    transitionName="slide-up"
                    value="value"
                    values={
                      Array [
                        Object {
                          "disabled": undefined,
                          "key": "value",
                          "label": "value",
                          "value": "value",
                        },
                      ]
                    }
                  >
                    <span
                      className="ant-select-selection-search"
                    >
                      <Input
                        accessibilityIndex={0}
                        attrs={Object {}}
                        editable={false}
                        id="rc_select_TEST_OR_SSR"
                        inputElement={null}
                        onChange={[Function]}
                        onCompositionEnd={[Function]}
                        onCompositionStart={[Function]}
                        onKeyDown={[Function]}
                        onMouseDown={[Function]}
                        onPaste={[Function]}
                        prefixCls="ant-select"
                        value=""
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autoComplete="off"
                          className="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          readOnly={true}
                          role="combobox"
                          style={
                            Object {
                              "opacity": 0,
                            }
                          }
                          unselectable="on"
                          value=""
                        />
                      </Input>
                    </span>
                    <span
                      className="ant-select-selection-item"
                    >
                      value
                    </span>
                  </SingleSelector>
                </div>
              </Selector>
            </Trigger>
          </SelectTrigger>
          <TransBtn
            className="ant-select-arrow"
            customizeIcon={[Function]}
            customizeIconProps={
              Object {
                "focused": false,
                "loading": false,
                "open": undefined,
                "searchValue": "",
                "showSearch": false,
              }
            }
          >
            <span
              aria-hidden={true}
              className="ant-select-arrow"
              onMouseDown={[Function]}
              style={
                Object {
                  "WebkitUserSelect": "none",
                  "userSelect": "none",
                }
              }
              unselectable="on"
            >
              <ForwardRef(DownOutlined)>
                <AntdIcon
                  icon={
                    Object {
                      "icon": Object {
                        "attrs": Object {
                          "focusable": "false",
                          "viewBox": "64 64 896 896",
                        },
                        "children": Array [
                          Object {
                            "attrs": Object {
                              "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                            },
                            "tag": "path",
                          },
                        ],
                        "tag": "svg",
                      },
                      "name": "down",
                      "theme": "outlined",
                    }
                  }
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down"
                    role="img"
                  >
                    <IconReact
                      className=""
                      icon={
                        Object {
                          "icon": Object {
                            "attrs": Object {
                              "focusable": "false",
                              "viewBox": "64 64 896 896",
                            },
                            "children": Array [
                              Object {
                                "attrs": Object {
                                  "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                },
                                "tag": "path",
                              },
                            ],
                            "tag": "svg",
                          },
                          "name": "down",
                          "theme": "outlined",
                        }
                      }
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        key="svg-down"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          key="svg-down-svg-0"
                        />
                      </svg>
                    </IconReact>
                  </span>
                </AntdIcon>
              </ForwardRef(DownOutlined)>
            </span>
          </TransBtn>
        </div>
      </ForwardRef(Select)>
    </Select>
  </Select>
</Select>
`;

exports[`Levels Levels to match snapshot 1`] = `
<Levels
  levels={
    Array [
      Object {
        "label": "label",
        "value": "levels value",
      },
    ]
  }
  onChange={[MockFunction]}
  value="value"
>
  <Select
    asyncData={false}
    className="drawer-tree-select-levels"
    defaultValue="value"
    loadingContent="Loading..."
    notFoundContent="No data"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "label",
          "value": "levels value",
        },
      ]
    }
    value="value"
    withPagination={false}
  >
    <Select
      bordered={true}
      choiceTransitionName="zoom"
      className="drawer-tree-select-levels"
      defaultValue="value"
      loading={false}
      notFoundContent="No data"
      onChange={[Function]}
      onDropdownVisibleChange={null}
      options={
        Array [
          Object {
            "label": "label",
            "value": "levels value",
          },
        ]
      }
      tagRender={[Function]}
      transitionName="slide-up"
      value="value"
    >
      <Select
        choiceTransitionName="zoom"
        className="drawer-tree-select-levels"
        clearIcon={<ForwardRef(CloseCircleFilled) />}
        defaultValue="value"
        dropdownClassName=""
        inputIcon={[Function]}
        listHeight={256}
        listItemHeight={24}
        loading={false}
        menuItemSelectedIcon={null}
        notFoundContent="No data"
        onChange={[Function]}
        onDropdownVisibleChange={null}
        options={
          Array [
            Object {
              "label": "label",
              "value": "levels value",
            },
          ]
        }
        prefixCls="ant-select"
        removeIcon={<ForwardRef(CloseOutlined) />}
        tagRender={[Function]}
        transitionName="slide-up"
        value="value"
      >
        <ForwardRef(Select)
          choiceTransitionName="zoom"
          className="drawer-tree-select-levels"
          clearIcon={<ForwardRef(CloseCircleFilled) />}
          defaultValue="value"
          dropdownClassName=""
          inputIcon={[Function]}
          listHeight={256}
          listItemHeight={24}
          loading={false}
          menuItemSelectedIcon={null}
          notFoundContent="No data"
          onChange={[Function]}
          onDropdownVisibleChange={null}
          options={
            Array [
              Object {
                "label": "label",
                "value": "levels value",
              },
            ]
          }
          prefixCls="ant-select"
          removeIcon={<ForwardRef(CloseOutlined) />}
          tagRender={[Function]}
          transitionName="slide-up"
          value="value"
        >
          <div
            className="ant-select drawer-tree-select-levels ant-select-single ant-select-show-arrow"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
          >
            <SelectTrigger
              containerWidth={null}
              dropdownClassName=""
              empty={false}
              getTriggerDOMNode={[Function]}
              popupElement={
                <ForwardRef(OptionList)
                  childrenAsData={false}
                  defaultActiveFirstOption={true}
                  flattenOptions={
                    Array [
                      Object {
                        "data": Object {
                          "label": "label",
                          "value": "levels value",
                        },
                        "groupOption": false,
                        "key": "levels value",
                      },
                    ]
                  }
                  height={256}
                  id="rc_select_TEST_OR_SSR"
                  itemHeight={24}
                  menuItemSelectedIcon={null}
                  multiple={false}
                  notFoundContent="No data"
                  onActiveValue={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "label",
                        "value": "levels value",
                      },
                    ]
                  }
                  prefixCls="ant-select"
                  searchValue=""
                  values={
                    Set {
                      "value",
                    }
                  }
                  virtual={true}
                />
              }
              prefixCls="ant-select"
              transitionName="slide-up"
            >
              <Trigger
                action={Array []}
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  Object {
                    "bottomLeft": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tl",
                        "bl",
                      ],
                    },
                    "bottomRight": Object {
                      "offset": Array [
                        0,
                        4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "tr",
                        "br",
                      ],
                    },
                    "topLeft": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "bl",
                        "tl",
                      ],
                    },
                    "topRight": Object {
                      "offset": Array [
                        0,
                        -4,
                      ],
                      "overflow": Object {
                        "adjustX": 0,
                        "adjustY": 1,
                      },
                      "points": Array [
                        "br",
                        "tr",
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                getTriggerDOMNode={[Function]}
                hideAction={Array []}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={
                  <div>
                    <ForwardRef(OptionList)
                      childrenAsData={false}
                      defaultActiveFirstOption={true}
                      flattenOptions={
                        Array [
                          Object {
                            "data": Object {
                              "label": "label",
                              "value": "levels value",
                            },
                            "groupOption": false,
                            "key": "levels value",
                          },
                        ]
                      }
                      height={256}
                      id="rc_select_TEST_OR_SSR"
                      itemHeight={24}
                      menuItemSelectedIcon={null}
                      multiple={false}
                      notFoundContent="No data"
                      onActiveValue={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      options={
                        Array [
                          Object {
                            "label": "label",
                            "value": "levels value",
                          },
                        ]
                      }
                      prefixCls="ant-select"
                      searchValue=""
                      values={
                        Set {
                          "value",
                        }
                      }
                      virtual={true}
                    />
                  </div>
                }
                popupAlign={Object {}}
                popupClassName=""
                popupPlacement="bottomLeft"
                popupStyle={
                  Object {
                    "minWidth": null,
                    "width": null,
                  }
                }
                popupTransitionName="slide-up"
                prefixCls="ant-select-dropdown"
                showAction={Array []}
              >
                <Selector
                  accessibilityIndex={0}
                  activeValue={null}
                  choiceTransitionName="zoom"
                  className="drawer-tree-select-levels"
                  clearIcon={<ForwardRef(CloseCircleFilled) />}
                  defaultValue="value"
                  domRef={
                    Object {
                      "current": <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                        >
                          value
                        </span>
                      </div>,
                    }
                  }
                  dropdownClassName=""
                  id="rc_select_TEST_OR_SSR"
                  inputElement={null}
                  inputIcon={[Function]}
                  key="trigger"
                  listHeight={256}
                  listItemHeight={24}
                  loading={false}
                  menuItemSelectedIcon={null}
                  multiple={false}
                  notFoundContent="No data"
                  onChange={[Function]}
                  onDropdownVisibleChange={null}
                  onSearch={[Function]}
                  onSelect={[Function]}
                  onToggleOpen={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "label",
                        "value": "levels value",
                      },
                    ]
                  }
                  prefixCls="ant-select"
                  removeIcon={<ForwardRef(CloseOutlined) />}
                  searchValue=""
                  showSearch={false}
                  tagRender={[Function]}
                  transitionName="slide-up"
                  value="value"
                  values={
                    Array [
                      Object {
                        "disabled": undefined,
                        "key": "value",
                        "label": "value",
                        "value": "value",
                      },
                    ]
                  }
                >
                  <div
                    className="ant-select-selector"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                  >
                    <SingleSelector
                      accessibilityIndex={0}
                      activeValue={null}
                      choiceTransitionName="zoom"
                      className="drawer-tree-select-levels"
                      clearIcon={<ForwardRef(CloseCircleFilled) />}
                      defaultValue="value"
                      domRef={
                        Object {
                          "current": <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-haspopup="listbox"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-item"
                            >
                              value
                            </span>
                          </div>,
                        }
                      }
                      dropdownClassName=""
                      id="rc_select_TEST_OR_SSR"
                      inputElement={null}
                      inputIcon={[Function]}
                      inputRef={
                        Object {
                          "current": <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            unselectable="on"
                            value=""
                          />,
                        }
                      }
                      listHeight={256}
                      listItemHeight={24}
                      loading={false}
                      menuItemSelectedIcon={null}
                      multiple={false}
                      notFoundContent="No data"
                      onChange={[Function]}
                      onCompositionEnd={[Function]}
                      onCompositionStart={[Function]}
                      onDropdownVisibleChange={null}
                      onInputChange={[Function]}
                      onInputKeyDown={[Function]}
                      onInputMouseDown={[Function]}
                      onInputPaste={[Function]}
                      onSearch={[Function]}
                      onSelect={[Function]}
                      onToggleOpen={[Function]}
                      options={
                        Array [
                          Object {
                            "label": "label",
                            "value": "levels value",
                          },
                        ]
                      }
                      prefixCls="ant-select"
                      removeIcon={<ForwardRef(CloseOutlined) />}
                      searchValue=""
                      showSearch={false}
                      tagRender={[Function]}
                      transitionName="slide-up"
                      value="value"
                      values={
                        Array [
                          Object {
                            "disabled": undefined,
                            "key": "value",
                            "label": "value",
                            "value": "value",
                          },
                        ]
                      }
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <Input
                          accessibilityIndex={0}
                          attrs={Object {}}
                          editable={false}
                          id="rc_select_TEST_OR_SSR"
                          inputElement={null}
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          prefixCls="ant-select"
                          value=""
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autoComplete="off"
                            className="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            onChange={[Function]}
                            onCompositionEnd={[Function]}
                            onCompositionStart={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onPaste={[Function]}
                            readOnly={true}
                            role="combobox"
                            style={
                              Object {
                                "opacity": 0,
                              }
                            }
                            unselectable="on"
                            value=""
                          />
                        </Input>
                      </span>
                      <span
                        className="ant-select-selection-item"
                      >
                        value
                      </span>
                    </SingleSelector>
                  </div>
                </Selector>
              </Trigger>
            </SelectTrigger>
            <TransBtn
              className="ant-select-arrow"
              customizeIcon={[Function]}
              customizeIconProps={
                Object {
                  "focused": false,
                  "loading": false,
                  "open": undefined,
                  "searchValue": "",
                  "showSearch": false,
                }
              }
            >
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <ForwardRef(DownOutlined)>
                  <AntdIcon
                    icon={
                      Object {
                        "icon": Object {
                          "attrs": Object {
                            "focusable": "false",
                            "viewBox": "64 64 896 896",
                          },
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                              },
                              "tag": "path",
                            },
                          ],
                          "tag": "svg",
                        },
                        "name": "down",
                        "theme": "outlined",
                      }
                    }
                  >
                    <span
                      aria-label="down"
                      className="anticon anticon-down"
                      role="img"
                    >
                      <IconReact
                        className=""
                        icon={
                          Object {
                            "icon": Object {
                              "attrs": Object {
                                "focusable": "false",
                                "viewBox": "64 64 896 896",
                              },
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "d": "M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z",
                                  },
                                  "tag": "path",
                                },
                              ],
                              "tag": "svg",
                            },
                            "name": "down",
                            "theme": "outlined",
                          }
                        }
                      >
                        <svg
                          aria-hidden="true"
                          className=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          key="svg-down"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            key="svg-down-svg-0"
                          />
                        </svg>
                      </IconReact>
                    </span>
                  </AntdIcon>
                </ForwardRef(DownOutlined)>
              </span>
            </TransBtn>
          </div>
        </ForwardRef(Select)>
      </Select>
    </Select>
  </Select>
</Levels>
`;
